threadx_test/evaluation/build/evaluation_files/home/klee/klee_test/threadx_test/evaluation/evaluation_files/klee-out-18/test000010.overshift.err
Error: overshift error
File: threadx/threadx/common/src/tx_thread_system_resume.c
Line: 217
assembly.ll line: 1139
State: 15
Stack: 
	#000042140 in klee_overshift_check(bitWidth=64, shift=symbolic) at runtime/Intrinsic/klee_overshift_check.c:27
	#100001139 in _tx_thread_system_resume(thread_ptr=93882198481024) at threadx/threadx/common/src/tx_thread_system_resume.c:217
	#200029778 in _tx_queue_receive(queue_ptr=symbolic, destination_ptr=symbolic, wait_option=symbolic) at threadx/threadx/common/src/tx_queue_receive.c:365
	#300029330 in _txe_queue_receive(queue_ptr=symbolic, destination_ptr=symbolic, wait_option=symbolic) at threadx/threadx/common/src/txe_queue_receive.c:156
	#400013511 in _txm_module_manager_tx_queue_receive_dispatch(module_instance=symbolic, param_0=symbolic, param_1=symbolic, param_2=symbolic) at threadx/threadx/common_modules/module_manager/inc/txm_module_manager_dispatch.h:1576
	#500006923 in _txm_module_manager_kernel_dispatch(kernel_request=42, param_0=symbolic, param_1=symbolic, param_2=symbolic) at threadx/threadx/common_modules/module_manager/src/txm_module_manager_kernel_dispatch.c:439
	#600000236 in m_txe_queue_receive(queue_ptr=symbolic, destination_ptr=symbolic, wait_option=symbolic) at threadx/threadx/common_modules/module_lib/src/txm_queue_receive.c:79
	#700000210 in main() at evaluation_files/queue_receive.c:17
